# ProfileExtruder

./: .gitignore  CMakeLists.txt  README.md
demo/: imgui.ini  main.cpp  shader_program.cpp
demo/data/: phong.fs.glsl  phong.vs.glsl
demo/utils/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  shader_program.cpp  shader_program.hpp  shaders.hpp
include/: bezier_curve.hpp  curve_mesh.hpp
src/: bezier_curve.cpp  curve_mesh.cpp
